--- a/andriod app test/app/src/main/res/layout/get_active.xml
+++ b/andriod app test/app/src/main/res/layout/get_active.xml
@@ -7,6 +7,10 @@
     android:layout_height="match_parent"
     android:id="@+id/linearLayout4">
 
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Get Active Activity" />-->
     <Button
         android:id="@+id/button8"
         android:layout_width="370dp"
