--- a/andriod app test/app/src/main/res/layout/activity_login.xml
+++ b/andriod app test/app/src/main/res/layout/activity_login.xml
@@ -75,14 +75,15 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="163dp"
-        tools:layout_editor_absoluteY="54dp"
+        tools:layout_editor_absoluteX="122dp"
+        tools:layout_editor_absoluteY="98dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <Button
         android:id="@+id/button11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:enabled="false"
         android:text="New User"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.522"
