--- a/andriod app test/app/src/main/res/layout/new_user.xml
+++ b/andriod app test/app/src/main/res/layout/new_user.xml
@@ -95,7 +95,7 @@
         app:layout_constraintTop_toBottomOf="@+id/username2" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/createAccountButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="133dp"
