Fixed Layout of Get Active and New User

--- a/andriod app test/app/src/main/res/layout/get_active.xml
+++ b/andriod app test/app/src/main/res/layout/get_active.xml
@@ -11,55 +11,60 @@
 <!--        android:layout_width="wrap_content"-->
 <!--        android:layout_height="wrap_content"-->
 <!--        android:text="Get Active Activity" />-->
+
     <Button
         android:id="@+id/button8"
         android:layout_width="370dp"
         android:layout_height="69dp"
+        android:layout_marginBottom="16dp"
         android:text="back"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button7" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="368dp"
-        android:layout_height="111dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginBottom="1dp"
+        android:layout_width="199dp"
+        android:layout_height="140dp"
         android:text="pose1"
-        app:layout_constraintBottom_toTopOf="@+id/button4"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/button6"
+        app:layout_constraintEnd_toStartOf="@+id/button4"
+        app:layout_constraintHorizontal_bias="0.485"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.847" />
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="368dp"
-        android:layout_height="111dp"
-        android:layout_marginTop="1dp"
+        android:layout_width="190dp"
+        android:layout_height="142dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
         android:text="pose2"
-        app:layout_constraintBottom_toTopOf="@+id/button6"
+        app:layout_constraintBottom_toTopOf="@+id/button7"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button5" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.859" />
 
     <Button
         android:id="@+id/button6"
-        android:layout_width="368dp"
-        android:layout_height="111dp"
+        android:layout_width="196dp"
+        android:layout_height="155dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="220dp"
         android:text="pose3"
-        app:layout_constraintBottom_toTopOf="@+id/button7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button4" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button7"
-        android:layout_width="368dp"
-        android:layout_height="111dp"
+        android:layout_width="191dp"
+        android:layout_height="157dp"
+        android:layout_marginBottom="220dp"
         android:text="pose4"
-        app:layout_constraintBottom_toTopOf="@+id/button8"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button6" />
+        app:layout_constraintHorizontal_bias="0.367"
+        app:layout_constraintStart_toEndOf="@+id/button6" />
 </androidx.constraintlayout.widget.ConstraintLayout>
