--- a/andriod app test/app/src/main/res/layout/new_user.xml
+++ b/andriod app test/app/src/main/res/layout/new_user.xml
@@ -20,6 +20,7 @@
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
         android:text="Name"
+        app:layout_constraintBottom_toTopOf="@+id/username3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,7 +35,7 @@
         android:layout_marginLeft="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
-        android:layout_marginBottom="456dp"
+        android:layout_marginBottom="416dp"
         android:hint="@string/prompt_email"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
@@ -58,6 +59,7 @@
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
         android:text="Username"
+        app:layout_constraintBottom_toTopOf="@+id/username2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,7 +87,7 @@
         android:layout_height="32dp"
         android:layout_marginStart="29dp"
         android:layout_marginLeft="29dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="26dp"
         android:layout_marginRight="26dp"
         android:text="I am 18+ years old"
