Fixed spacing and naming issues

--- a/andriod app test/app/src/main/res/layout/pose.xml
+++ b/andriod app test/app/src/main/res/layout/pose.xml
@@ -42,7 +42,7 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <Button
-        android:id="@+id/button9"
+        android:id="@+id/back_button_pose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="29dp"
