--- a/andriod app test/app/src/main/res/layout/get_active.xml
+++ b/andriod app test/app/src/main/res/layout/get_active.xml
@@ -19,15 +19,17 @@
         tools:layout_editor_absoluteX="25dp" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/pose1"
         android:layout_width="190dp"
         android:layout_height="140dp"
         android:layout_marginTop="250dp"
         android:text="pose1"
-        app:layout_constraintEnd_toStartOf="@+id/button4"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.072"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/button4"
@@ -46,14 +48,13 @@
         android:layout_height="140dp"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="5dp"
         android:text="pose3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button7"
-        app:layout_constraintHorizontal_bias="0.09"
+        app:layout_constraintHorizontal_bias="0.083"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button5"
-        app:layout_constraintVertical_bias="0.03" />
+        app:layout_constraintTop_toBottomOf="@+id/pose1"
+        app:layout_constraintVertical_bias="0.054" />
 
     <Button
         android:id="@+id/button7"
