--- a/andriod app test/app/src/main/res/layout/get_active.xml
+++ b/andriod app test/app/src/main/res/layout/get_active.xml
@@ -18,11 +18,12 @@
         app:layout_constraintVertical_bias="0.9"
         tools:layout_editor_absoluteX="25dp" />
 
-    <Button
+    <ImageButton
         android:id="@+id/pose1"
         android:layout_width="190dp"
         android:layout_height="140dp"
         android:layout_marginTop="250dp"
+        android:src="@drawable/ptype1"
         android:text="pose1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,41 +32,44 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
-    <Button
-        android:id="@+id/button4"
+    <ImageButton
+        android:id="@+id/pose2"
         android:layout_width="190dp"
         android:layout_height="140dp"
         android:layout_marginTop="248dp"
         android:layout_marginEnd="4dp"
         android:layout_marginRight="4dp"
+        android:src="@drawable/ptype2"
         android:text="pose2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/button6"
+    <ImageButton
+        android:id="@+id/pose3"
         android:layout_width="190dp"
         android:layout_height="140dp"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="15dp"
+        android:src="@drawable/ptype3"
         android:text="pose3"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button7"
+        app:layout_constraintEnd_toStartOf="@+id/pose4"
         app:layout_constraintHorizontal_bias="0.083"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pose1"
         app:layout_constraintVertical_bias="0.054" />
 
-    <Button
-        android:id="@+id/button7"
+    <ImageButton
+        android:id="@+id/pose4"
         android:layout_width="190dp"
         android:layout_height="140dp"
         android:layout_marginEnd="4dp"
         android:layout_marginRight="4dp"
+        android:src="@drawable/ptype4"
         android:text="pose4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button4"
+        app:layout_constraintTop_toBottomOf="@+id/pose2"
         app:layout_constraintVertical_bias="0.064" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
