--- a/andriod app test/app/src/main/res/layout/add_friend.xml
+++ b/andriod app test/app/src/main/res/layout/add_friend.xml
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <Button
-        android:id="@+id/button11"
+        android:id="@+id/AddFriendBackButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="26dp"
