--- a/andriod app test/app/src/main/res/layout/get_active.xml
+++ b/andriod app test/app/src/main/res/layout/get_active.xml
@@ -25,6 +25,8 @@
         android:layout_marginTop="250dp"
         android:src="@drawable/ptype1"
         android:text="pose1"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.072"
@@ -41,6 +43,8 @@
         android:layout_marginRight="4dp"
         android:src="@drawable/ptype2"
         android:text="pose2"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -52,6 +56,8 @@
         android:layout_marginLeft="15dp"
         android:src="@drawable/ptype3"
         android:text="pose3"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/pose4"
         app:layout_constraintHorizontal_bias="0.083"
@@ -67,6 +73,8 @@
         android:layout_marginRight="4dp"
         android:src="@drawable/ptype4"
         android:text="pose4"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pose2"
