--- a/andriod app test/app/src/main/res/layout/picture.xml
+++ b/andriod app test/app/src/main/res/layout/picture.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@drawable/bkgrd"
     >
     <Button android:id="@+id/button1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="take photo"></Button>
     <ImageView android:id="@+id/imageView1" android:layout_height="wrap_content" android:layout_width="wrap_content"></ImageView>
