--- a/andriod app test/app/src/main/res/layout/pose.xml
+++ b/andriod app test/app/src/main/res/layout/pose.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout5"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/bkgrd">
 
     <ImageView
         android:id="@+id/imageView4"
