--- a/andriod app test/app/src/main/res/layout/add_friend.xml
+++ b/andriod app test/app/src/main/res/layout/add_friend.xml
@@ -9,12 +9,12 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="300dp"
-        android:text="Add Username"
+        android:layout_width="131dp"
+        android:layout_height="37dp"
+        android:layout_marginTop="260dp"
+        android:text="Britney Echeverria  "
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,11 +24,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="160dp"
         android:layout_marginLeft="160dp"
-        android:layout_marginTop="116dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="163dp"
         android:layout_marginRight="163dp"
         android:text="Add"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
@@ -45,8 +46,11 @@
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:src="@drawable/sample_friend"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_marginStart="129dp"
         android:layout_marginLeft="129dp"
         android:layout_marginTop="48dp"
